[gd_scene load_steps=13 format=3 uid="uid://c7g7vx5ud5yir"]

[ext_resource type="Script" uid="uid://cyk6m0jmtqec3" path="res://script/piege/projectile_lumiere.gd" id="1_pw7ys"]
[ext_resource type="Texture2D" uid="uid://ptcgy7r5ips1" path="res://sprite/Paper-Pixels-8x8/missile_lance_lumiere.png" id="2_kupyk"]
[ext_resource type="Texture2D" uid="uid://bxqwxsryem6me" path="res://2d_lights_and_shadows_neutral_point_light.webp" id="3_7ask4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kjjb1"]
atlas = ExtResource("2_kupyk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kymvj"]
atlas = ExtResource("2_kupyk")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2lyh"]
atlas = ExtResource("2_kupyk")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_21syk"]
atlas = ExtResource("2_kupyk")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jdkc"]
atlas = ExtResource("2_kupyk")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_da1ms"]
atlas = ExtResource("2_kupyk")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bky6c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjjb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kymvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2lyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21syk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jdkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_da1ms")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cqelw"]
radius = 2.0

[sub_resource type="Curve" id="Curve_y1kuw"]
_data = [Vector2(0.0208333, 0.802198), 0.0, 0.0, 0, 0, Vector2(0.770833, 0.175824), 0.0, 0.0, 0, 0]
point_count = 2

[node name="projectile_lumiere" type="Node2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_pw7ys")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.333333, 1.66667)
sprite_frames = SubResource("SpriteFrames_bky6c")
frame_progress = 0.523137

[node name="Area2D" type="Area2D" parent="." groups=["projectile"]]
position = Vector2(0.333333, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.333333, -2)
shape = SubResource("CircleShape2D_cqelw")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 15
lifetime = 0.5
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector2(0, -980)
scale_amount_min = 4.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_y1kuw")
color = Color(1, 0.972549, 0.905882, 1)

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
emitting = false
amount = 15
lifetime = 0.2
one_shot = true
explosiveness = 0.61
direction = Vector2(100, 100)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 122.9
scale_amount_min = 4.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_y1kuw")
color = Color(1, 0.972549, 0.905882, 1)

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.1
texture = ExtResource("3_7ask4")
texture_scale = 0.1

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
